--- a/src/component/header/_header.scss
+++ b/src/component/header/_header.scss
@@ -24,16 +24,21 @@ header {
 
 .hero__main {
   position: absolute;
-  width: 60%;
-  height: 50px;
+  width: 80vw;
+  height: auto;
   top: 39% !important;
   left: 6%;
-  height: 35vh;
+  height: 40vh;
   overflow: hidden;
 
   h1 {
-    font-size: 3vw;
+    font-size: 3.5vw;
   }
+}
+
+.image-center {
+  width: 20vw;
+  padding: 5px;
 }
 
 .title--active {
@@ -44,3 +49,53 @@ header {
 }
 
 // RESPONSIVE
+
+@media only screen and (max-width: 768px) {
+  .hero {
+    position: relative;
+    width: 100vw;
+    height: auto;
+  }
+
+  .container {
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    height: auto;
+  }
+
+  .img__header {
+    object-fit: cover;
+    width: 100vw;
+    height: auto;
+    min-height: 400px;
+  }
+
+  .hero__main {
+    position: absolute;
+    width: 70%;
+    height: 50px;
+    top: 39% !important;
+    left: 6%;
+    height: 35vh;
+    overflow: hidden;
+    font-size: 15px;
+
+    h1 {
+      font-size: 3vw;
+    }
+  }
+
+  .image-center {
+    width: 25vw;
+    padding: 5px;
+  }
+
+  .title--active {
+    color: rgb(255, 0, 0);
+    font-weight: 900;
+    text-shadow: $shadow $color_shadow;
+    filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
+    font-size: 15px;
+  }
+}
