--- a/src/component/main2/_main2.scss
+++ b/src/component/main2/_main2.scss
@@ -19,7 +19,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   margin: auto;
-  padding: 4rem;
+  padding: 3rem;
   height: auto;
 }
 
@@ -38,7 +38,7 @@
 
 .imagen__main2 {
   max-width: 40vw;
-  min-height: 55vh;
+  min-height: 200px;
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -46,24 +46,26 @@
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   margin: auto;
   background-color: #f0e9c6;
+  margin-top: 20px;
 }
 
 .texto__main__2 {
   margin-top: 10rem;
 }
 
-.texto__main__2 h3 {
+.background-section-main2 h3 {
+  margin-top: 5rem;
   text-align: center;
   font-family: sans-serif;
   font-weight: 900;
-  font-size: 2.78vw;
+  font-size: auto;
   color: rgb(221, 83, 83);
   filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
 }
 
 // RESPONSIVE
 
-@media screen and (min-width: 200px) and (max-width: 638.98px) {
+@media only screen and (max-width: 768px) {
   .background-section-main2 {
     background: url(../img/background_property_month.jpg); /* Chrome 10-25, Safari 5.1-6 */
     background: url(../img/background_property_month.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -73,9 +75,10 @@
     object-fit: cover;
     position: relative;
     width: 100%;
-    min-height: 25vw;
+    min-height: 55vw;
     height: auto;
-    margin-top: -100px;
+    margin: 0;
+    padding: 0;
   }
 
   .container__seccion-2 {
@@ -84,42 +87,48 @@
     flex-wrap: wrap;
     justify-content: space-around;
     margin: auto;
+    padding: 3rem;
     height: auto;
   }
 
   .container__seccion-2 p {
-    max-width: 100vw;
+    max-width: 80vw;
     width: 100%;
     height: auto;
     text-align: justify;
-    font-size: 2.6vw;
+    font-size: 3.44vw;
     margin: auto;
-    padding-bottom: 1rem;
-    margin-top: -3.2rem;
   }
 
   .container__seccion-2 h3 {
-    font-size: 5.78vw;
+    font-size: 2.78vw;
   }
 
   .imagen__main2 {
-    max-width: 100vw;
+    max-width: 80vw;
+    min-height: 200px;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    border-radius: 5px;
+    object-fit: contain;
+    border-radius: 15px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     margin: auto;
+    background-color: #f0e9c6;
+    margin-top: 20px;
   }
 
   .texto__main__2 {
     margin-top: 10rem;
   }
 
-  .texto__main__2 h3 {
+  .background-section-main2 h3 {
+    font-size: 30px;
+    margin-top: 5rem;
     text-align: center;
     font-family: sans-serif;
     font-weight: 900;
-    font-size: 4.78vw;
+    font-size: auto;
+    color: rgb(221, 83, 83);
+    filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
   }
 }
